Accordion built and implemented under Services

--- a/public/index.html
+++ b/public/index.html
@@ -153,13 +153,57 @@
             </div>
         </div>
         <div class="row">
-            <div class="sixteen columns centered tabs">
+            <div class="sixteen columns centered tabs accordion">
                 <h3>Devices we&rsquo;ve evaluated:</h3>
+                <div class="clearfix"><ul>
+                    <li><span>Percutaneous transluminal angioplasty balloon catheters</span></li>
+                    <li><span>Drug-coated balloon catheters</span></li>
+                    <li><span>Bare metal stents</span></li>
+                    <li><span>Drug-eluting stents</span></li>
+                    <li><span>Fabric-coated stents</span></li>
+                </ul><ul>
+                    <li><span>Bioresorbable stents</span></li>
+                    <li><span>Atherectomy devices</span></li>
+                    <li><span>Thrombectomy devices</span></li>
+                    <li><span>Percutaenous venous valves</span></li>
+                    <li><span>Endoluminal aortic stent-grafts</span></li>
+                    <li><span>Endovascular bracytherapy catheters</span></li>
+                </ul></div>
+
                 <h3>Trials we&rsquo;ve conducted:</h3>
+                <div class="clearfix"><ul>
+                    <li><span>First in human trials</span></li>
+                    <li><span>Single center observational studies</span></li>
+                    <li><span>Multi-center prospective registries</span></li>
+                    <li><span>Multi-center prospective randomized trials</span></li>
+                    <li><span>Post-approval studies</span></li>
+                </ul></div>
                 <h3>Pharmaceutical studies in which we&rsquo;ve participated:</h3>
+                <div class="clearfix"><ul>
+                    <li><span>Brachial artery reactivity</span></li>
+                    <li><span>Novel methods of drug delivery</span></li>
+                    <li><span>Carotid intima-media thickness</span></li>
+                </ul></div>
                 <h3>Vascular beds in which we&rsquo;ve been involved:</h3>
+                <div class="clearfix"><ul>
+                    <li><span>Carotid Artery</span></li>
+                    <li><span>Aorta</span></li>
+                    <li><span>Renal Artery</span></li>
+                    <li><span>Iliac Artery</span></li>
+                    <li><span>Superficial Femoral Artery</span></li>
+                    <li><span>Popliteal Artery</span></li>
+                </ul><ul>
+                    <li><span>Infrapopliteal Arteries</span></li>
+                    <li><span>Superficial and deep venous systems</span></li>
+                </ul></div>
                 <h3>Sponsors we work with:</h3>
+                <div class="clearfix"><ul>
+                    <li><span>Commercial medical technology companies</span></li>
+                    <li><span>Researchers and physicians from around the world</span></li>
+                    <li><span>National institutes of health</span></li>
+                </ul></div>
                 <h3>Countries where we work:</h3>
+                <div class="clearfix"><p>[map]</div>
             </div>
         </div>
     </div>
@@ -254,8 +298,10 @@
             </div>
         </div>
     </div></div>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.1.min.js"><\/script>')</script>
+    <!--script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.1.min.js"><\/script>')</script-->
+    <script src="js/jquery-1.8.0.min.js"></script>
+    <script src="js/jquery-ui-1.8.23.custom.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
