--- a/public/index.html
+++ b/public/index.html
@@ -290,14 +290,12 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="footer">
-        <div class="row">
+        <div class="footer"><div class="row">
             <div class="twenty columns">
-                <p>&copy; 2012 VasCore. All rights reserved.</p>
+                <p>&copy; 2012 VasCore. All Rights Reserved.</p>
             </div>
-        </div>
-    </div></div>
+        </div></div>
+    </div>
     <!--script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.1.min.js"><\/script>')</script-->
     <script src="js/jquery-1.8.0.min.js"></script>
