Added support for scrolling across sections

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <div class="masthead">
         <div class="row" role="banner">
             <div class="three columns logo">
-                <img src="images/640x140.png" />
+                <a href="#intro"><img src="images/640x140.png" /></a>
             </div>
             <div class="seventeen columns nav">
                 <div role="navigation">
