--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,8 @@
     <link rel="stylesheet" href="css/scroll.css" />
     <!-- <![endif]-->
 
+    <meta name="viewport" content="width=device-width" />
+
 </head>
 <body>
     <div class="masthead">
@@ -293,11 +295,11 @@
         <div class="footer"><div class="row">
             <div class="twenty columns">
                 <p>&copy; 2012 VasCore. All Rights Reserved.</p>
+                <a href="#intro" id="scrolltotop">Scroll to Top</a>
             </div>
         </div></div>
     </div>
-    <!--script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.1.min.js"><\/script>')</script-->
+
     <script src="js/jquery-1.8.0.min.js"></script>
     <script src="js/jquery-ui-1.8.23.custom.min.js"></script>
     <script src="js/script.js"></script>
