Tightened up Scroll to Top to use font and for better positioning.

--- a/public/index.html
+++ b/public/index.html
@@ -295,7 +295,7 @@
         <div class="footer"><div class="row">
             <div class="twenty columns">
                 <p>&copy; 2012 VasCore. All Rights Reserved.</p>
-                <a href="#intro" id="scrolltotop">Scroll to Top</a>
+                <a href="#intro" id="scrolltotop">Scroll <em>to</em> Top</a>
             </div>
         </div></div>
     </div>
