--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/typography.css" />
     <link rel="stylesheet" href="css/scroll.css" />
+    <link rel="stylesheet" href="css/orbit.css" />
     <!-- <![endif]-->
 
     <meta name="viewport" content="width=device-width" />
@@ -205,7 +206,7 @@
                     <li><span>National institutes of health</span></li>
                 </ul></div>
                 <h3>Countries where we work:</h3>
-                <div class="clearfix"><p>[map]</div>
+                <div class="clearfix map"><img src="images/services-map.png" /></div>
             </div>
         </div>
     </div>
@@ -251,6 +252,30 @@
                 <h2>Read about our work.</h2>
             </div>
         </div>
+        <div class="slideshowwrapper">
+            <div class="row">
+                <div class="twenty columns centered">
+                    <div class="slide">
+                        <h3>The Nitinol SMART Stent vs. Wallstent for Suboptimal Iliac Artery Angioplasty: The CRISP-US Trial Results.</h3>
+                        <p class="date">2004 Sep;15(9):911-8</p>
+                        <h4>Journal of  Vascular and Interventional Radiology</h4>
+                        <p>Ponec D, Jaff MR, Swischuk J, Feiring A, Laird J, Mehran M, Popma JJ, Donohoe D, Firth B, Keim E, Snead D.</p>
+                    </div>
+                    <div class="slide">
+                        <h3>Slide 2</h3>
+                        <p class="date">2004 Sep;15(9):911-8</p>
+                        <h4>Journal of  Vascular and Interventional Radiology</h4>
+                        <p>Ponec D, Jaff MR, Swischuk J, Feiring A, Laird J, Mehran M, Popma JJ, Donohoe D, Firth B, Keim E, Snead D.</p>
+                    </div>
+                    <div class="slide">
+                        <h3>Slide 3</h3>
+                        <p class="date">2004 Sep;15(9):911-8</p>
+                        <h4>Journal of  Vascular and Interventional Radiology</h4>
+                        <p>Ponec D, Jaff MR, Swischuk J, Feiring A, Laird J, Mehran M, Popma JJ, Donohoe D, Firth B, Keim E, Snead D.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="section" id="contact">
         <div class="row">
@@ -272,14 +297,15 @@
                 		<span class="city-state"><span itemprop="addressLocality">Boston</span>, <span itemprop="addressRegion">MA</span></span>
                 		<span itemprop="postalCode">02114</span>
                 	</p>
+                    <p><a href="#">Map <span>&rsaquo;</span></a></p>
                 </div>
             </div>
             <div class="six columns" id="phone-fax">
             	<h3>Phone<br />&amp; Fax</h3>
                 <div class="contact-info">
                 	<p>
-                		<span>P / <span itemprop="telephone">617.726.5552</span></span>
-                		<span>F / <span itemprop="faxNumber">617.726.1977</span></span>
+                		<span><span class="label">P / </span><span itemprop="telephone">617.726.5552</span></span>
+                		<span><span class="label">F / </span><span itemprop="faxNumber">617.726.1977</span></span>
                 	</p>
                 </div>
             </div>
@@ -302,6 +328,7 @@
 
     <script src="js/jquery-1.8.0.min.js"></script>
     <script src="js/jquery-ui-1.8.23.custom.min.js"></script>
+    <script src="js/jquery.foundation.orbit.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
