Synching up git repo

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,9 @@
 
     <meta name="viewport" content="width=device-width" />
 
+    <script type="text/javascript" src="//use.typekit.net/lyf6dbd.js"></script>
+    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+
 </head>
 <body>
     <div class="masthead">
@@ -224,24 +227,33 @@
         <div class="row logos">
             <div class="eighteen columns centered">
                 <img src="images/logo_480-biomedical.png" />
-                <img src="images/logo_480-biomedical.png" />
-                <img src="images/logo_480-biomedical.png" />
-                <img src="images/logo_480-biomedical.png" />
-                <img src="images/logo_480-biomedical.png" />
-                <img src="images/logo_480-biomedical.png" />
-                <img src="images/logo_480-biomedical.png" />
-                <img src="images/logo_480-biomedical.png" />
-                <img src="images/logo_480-biomedical.png" />
-                <img src="images/logo_480-biomedical.png" />
-                <img src="images/logo_480-biomedical.png" />
-                <img src="images/logo_480-biomedical.png" />
-                <img src="images/logo_480-biomedical.png" />
-                <img src="images/logo_480-biomedical.png" />
-                <img src="images/logo_480-biomedical.png" />
-                <img src="images/logo_480-biomedical.png" />
-                <img src="images/logo_480-biomedical.png" />
-                <img src="images/logo_480-biomedical.png" />
-                <img src="images/logo_480-biomedical.png" />
+                <img src="images/logo_abbott.png" />
+                <img src="images/logo_bard.png" />
+                <img src="images/logo_biotronik.png" />
+                <img src="images/logo_boston-scientific.png" />
+                <img src="images/logo_cardiosonics.png" />
+                <img src="images/logo_csi.png" />
+                <img src="images/logo_cardiva.png" />
+                <img src="images/logo_cook-medical.png" />
+                <img src="images/logo_cordis.png" />
+                <img src="images/logo_covidien.png" />
+                <img src="images/logo_cvingenuity.png" />
+                <img src="images/logo_daiichi-sankyo.png" />
+                <img src="images/logo_flexible-stenting-solutions.png" />
+                <img src="images/logo_getinge-group.png" />
+                <img src="images/logo_idev.png" />
+                <img src="images/logo_intact-vascular.png" />
+                <img src="images/logo_medrad.png" />
+                <img src="images/logo_medtronic.png" />
+                <img src="images/logo_otsuka.png" />
+                <img src="images/logo_pervasis.png" />
+                <img src="images/logo_proteon.png" />
+                <img src="images/logo_silkroad.png" />
+                <img src="images/logo_spectranetics.png" />
+                <img src="images/logo_terumo.png" />
+                <img src="images/logo_theravasc.png" />
+                <img src="images/logo_vessix-vascular.png" />
+                <img src="images/logo_gore.png" />
             </div>
         </div>
     </div>
@@ -312,9 +324,7 @@
             <div class="seven columns" id="email">
             	<h3>Email</h3>
                 <div class="contact-info">
-                	<p>
-                		<span><a href="#" itemprop="email">mghvascore@partners.org</a></span>
-                	</p>
+                	<p><span><a href="#" itemprop="email">mghvascore@partners.org</a></span></p>
                 </div>
             </div>
         </div>
