Many many updates for slideshows, JS width testing for functionality, accordion fixes, styles, etc.

--- a/public/index.html
+++ b/public/index.html
@@ -60,13 +60,13 @@
         </div>
         <div class="section" id="about">
             <div class="row">
-                <div class="ten columns centered">
+                <div class="eleven columns centered">
                     <h1>About</h1>
                     <h2>Meet our dedicated team of experts.</h2>
                 </div>
             </div>
             <div class="row">
-                <div class="fourteen columns centered">
+                <div class="thirteen columns centered">
                     <p>Having a full-time, highly-experienced and consistent staff who aren’t constantly shifting roles allows us to ensure smooth, efficient and accurate evaluations. Our team consists of fully-certified physicians, technologists and nurses, along with quality officers with a vast knowledge of regulatory guidelines – all committed to navigating you to a successful approval.</p>
                 </div>
             </div>
@@ -133,20 +133,37 @@
                 </div>
             </div>
             <div class="row">
-                <div class="twelve columns centered">
-                    <h2>An industry leader. And your leader through the approval process.</h2>
+                <div class="thirteen columns centered">
+                    <h2><span>An industry leader.</span> And your leader through the approval process. </h2>
                 </div>
             </div>
             <div class="row">
-                <div class="fourteen columns centered">
+                <div class="thirteen columns centered">
                     <p>Few core labs offer the high level of expertise and thorough, friendly customer service as does VasCore. Maybe that’s why we’re considered the leader in everything from the development of multicenter vascular device imaging protocols, to the analysis of ultrasound and radiographic images, to the reporting of data to sponsors and regulatory groups across the globe.</p>
                 </div>
             </div>
             <div class="row">
                 <div class="eighteen columns centered">
-                    <h3>Some of the trials in which we've been involved</h3>
+                    <h3 class="bubble">Some of the trials in which we've been involved</h3>
+
+
+
                 </div>
             </div>
+
+            <div class="trialslidewrapper">
+                <div class="trialslides">
+                    <div class="trialslide">
+                        <div class="infographic">
+
+                        </div>
+                    </div>
+                </div>
+                <div class="trialslidenav">
+
+                </div>
+            </div>
+
         </div>
         <div class="section" id="services">
             <div class="row">
@@ -155,8 +172,12 @@
                 </div>
             </div>
             <div class="row">
-                <div class="sixteen columns centered">
+                <div class="eighteen columns centered">
                     <h2>We offer a wide range of services for a smooth road to approval.</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="sixteen columns centered">
                     <p>For more than 15 years VasCore has been helping clients successfully navigate the evaluation process for novel vascular devices. From specifying what kind of trial is necessary in order to analyze a product, to examining its effectiveness, to presenting results to regulatory agencies in the U.S. and internationally, VasCore knows how to guide you through every step of the process.</p>
                 </div>
             </div>
@@ -179,7 +200,7 @@
                     </ul></div>
 
                     <h3>Trials we&rsquo;ve conducted:</h3>
-                    <div class="clearfix"><ul>
+                    <div class="clearfix"><ul class="single">
                         <li><span>First in human trials</span></li>
                         <li><span>Single center observational studies</span></li>
                         <li><span>Multi-center prospective registries</span></li>
@@ -187,7 +208,7 @@
                         <li><span>Post-approval studies</span></li>
                     </ul></div>
                     <h3>Pharmaceutical studies in which we&rsquo;ve participated:</h3>
-                    <div class="clearfix"><ul>
+                    <div class="clearfix"><ul class="single">
                         <li><span>Brachial artery reactivity</span></li>
                         <li><span>Novel methods of drug delivery</span></li>
                         <li><span>Carotid intima-media thickness</span></li>
@@ -205,7 +226,7 @@
                         <li><span>Superficial and deep venous systems</span></li>
                     </ul></div>
                     <h3>Sponsors we work with:</h3>
-                    <div class="clearfix"><ul>
+                    <div class="clearfix"><ul class="single">
                         <li><span>Commercial medical technology companies</span></li>
                         <li><span>Researchers and physicians from around the world</span></li>
                         <li><span>National institutes of health</span></li>
@@ -266,9 +287,9 @@
                     <h2>Read about our work.</h2>
                 </div>
             </div>
-            <div class="slideshowwrapper">
+            <div id="publicationslideshow" class="slideshowwrapper">
                 <div class="row">
-                    <div class="twenty columns centered">
+                    <div class="slides twenty columns centered">
                         <div class="slide">
                             <h3>The Nitinol SMART Stent vs. Wallstent for Suboptimal Iliac Artery Angioplasty: The CRISP-US Trial Results.</h3>
                             <p class="date">2004 Sep;15(9):911-8</p>
@@ -287,6 +308,9 @@
                             <h4>Journal of  Vascular and Interventional Radiology</h4>
                             <p>Ponec D, Jaff MR, Swischuk J, Feiring A, Laird J, Mehran M, Popma JJ, Donohoe D, Firth B, Keim E, Snead D.</p>
                         </div>
+                    </div>
+                    <div class="slidecount four">
+                        <span id="publication-currentslide">1</span> of <span  id="publication-totalslides"></span>
                     </div>
                 </div>
             </div>
