Fixing JS performance (adding debounced resize event, unbinding events when too narrow so no duplication), new logo and Scroll for More arrow

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     <div class="masthead">
         <div class="row" role="banner">
             <div class="three columns logo">
-                <a href="#intro"><img src="images/640x140.png" alt="Vascore" /></a>
+                <a href="#intro"><img src="images/logo_vascore.png" alt="Vascore" /></a>
             </div>
             <div class="seventeen columns nav">
                 <div role="navigation">
@@ -57,6 +57,7 @@
                     <p>Whether it&rsquo;s determining the type of trials needed to evaluate your product, to accurately analyzing its efficacy, to knowing the best way to present it to regulatory agencies, the process can be overwhelming. That&rsquo;s why VasCore is committed to helping clients worldwide navigate the process, every step of the way. For more than a decade, VasCore has been considered the leader in the strategic development of imaging protocols and the interpretation of ultrasound and radiographic images as part of novel vascular device trials. Every day, we help turn the challenges of approval into successes for effective vascular products.</p>
                 </div>
             </div>
+            <a href="#about" id="scrollformore" class="scrolldown">Scroll to learn more</a>
         </div>
         <div class="section" id="about">
             <div class="row">
