Tweaking appearance of both scroll arrows

--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
                     <p>Whether it&rsquo;s determining the type of trials needed to evaluate your product, to accurately analyzing its efficacy, to knowing the best way to present it to regulatory agencies, the process can be overwhelming. That&rsquo;s why VasCore is committed to helping clients worldwide navigate the process, every step of the way. For more than a decade, VasCore has been considered the leader in the strategic development of imaging protocols and the interpretation of ultrasound and radiographic images as part of novel vascular device trials. Every day, we help turn the challenges of approval into successes for effective vascular products.</p>
                 </div>
             </div>
-            <a href="#about" id="scrollformore" class="scrolldown">Scroll to learn more</a>
+            <a href="#about" id="scrollformore" class="scrolldown">SCROLL <em>to</em> LEARN MORE</a>
         </div>
         <div class="section" id="about">
             <div class="row">
@@ -358,7 +358,7 @@
             <div class="footer"><div class="row">
                 <div class="twenty columns">
                     <p>&copy; 2012 VasCore. All Rights Reserved.</p>
-                    <a href="#intro" id="scrolltotop">Scroll <em>to</em> Top</a>
+                    <a href="#intro" id="scrolltotop">BACK <em>to</em> TOP</a>
                 </div>
             </div></div>
         </div>
