Tweaks and fixes for contact area, etc.

--- a/public/index.html
+++ b/public/index.html
@@ -51,8 +51,12 @@
     <div class="wrapper">
         <div class="section" id="intro">
             <div class="row">
-                <div class="fourteen columns centered">
+                <div class="sixteen columns centered">
                     <h2>We help you so you can help others.</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="fifteen columns centered">
                     <p class="subhead">It can be a long road from the invention of a vascular device to regulatory approval.</p>
                     <p>Whether it&rsquo;s determining the type of trials needed to evaluate your product, to accurately analyzing its efficacy, to knowing the best way to present it to regulatory agencies, the process can be overwhelming. That&rsquo;s why VasCore is committed to helping clients worldwide navigate the process, every step of the way. For more than a decade, VasCore has been considered the leader in the strategic development of imaging protocols and the interpretation of ultrasound and radiographic images as part of novel vascular device trials. Every day, we help turn the challenges of approval into successes for effective vascular products.</p>
                 </div>
@@ -67,8 +71,8 @@
                 </div>
             </div>
             <div class="row">
-                <div class="thirteen columns centered">
-                    <p>Having a full-time, highly-experienced and consistent staff who aren’t constantly shifting roles allows us to ensure smooth, efficient and accurate evaluations. Our team consists of fully-certified physicians, technologists and nurses, along with quality officers with a vast knowledge of regulatory guidelines – all committed to navigating you to a successful approval.</p>
+                <div class="fifteen columns centered">
+                    <p class="intro">Having a full-time, highly-experienced and consistent staff who aren’t constantly shifting roles allows us to ensure smooth, efficient and accurate evaluations. Our team consists of fully-certified physicians, technologists and nurses, along with quality officers with a vast knowledge of regulatory guidelines – all committed to navigating you to a successful approval.</p>
                 </div>
             </div>
             <div class="row">
@@ -328,7 +332,7 @@
                 </div>
             </div>
             <div class="row contact-row" itemscope itemtype="http://schema.org/Organization">
-                <div class="seven columns" id="location">
+                <div class="six columns" id="location">
                 	<h3>Location</h3>
                     <div class="contact-info">
                     	<p itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
@@ -336,7 +340,7 @@
                     		<span class="city-state"><span itemprop="addressLocality">Boston</span>, <span itemprop="addressRegion">MA</span></span>
                     		<span itemprop="postalCode">02114</span>
                     	</p>
-                        <p><a href="#">Map <span>&rsaquo;</span></a></p>
+                        <p><a href="#" class="arrow">Map</a></p>
                     </div>
                 </div>
                 <div class="six columns" id="phone-fax">
@@ -348,7 +352,7 @@
                     	</p>
                     </div>
                 </div>
-                <div class="seven columns" id="email">
+                <div class="six columns" id="email">
                 	<h3>Email</h3>
                     <div class="contact-info">
                     	<p><span><a href="#" itemprop="email">mghvascore@partners.org</a></span></p>
@@ -357,7 +361,7 @@
             </div>
             <div class="footer"><div class="row">
                 <div class="twenty columns">
-                    <p>&copy; 2012 VasCore. All Rights Reserved.</p>
+                    <p>&copy; 2012 VasCore. All rights reserved.</p>
                     <a href="#intro" id="scrolltotop">BACK <em>to</em> TOP</a>
                 </div>
             </div></div>
