More styling for Expertise modal windows, some code/style refactoring, browser testing tweaks

--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,7 @@
             </div>
             <div class="row">
                 <div class="fifteen columns centered">
-                    <p class="intro">Having a full-time, highly-experienced and consistent staff who aren’t constantly shifting roles allows us to ensure smooth, efficient and accurate evaluations. Our team consists of fully-certified physicians, technologists and nurses, along with quality officers with a vast knowledge of regulatory guidelines – all committed to navigating you to a successful approval.</p>
+                    <p class="intro">Having a full-time, highly-experienced and consistent staff who aren&rsquo;t constantly shifting roles allows us to ensure smooth, efficient and accurate evaluations. Our team consists of fully-certified physicians, technologists and nurses, along with quality officers with a vast knowledge of regulatory guidelines &mdash; all committed to navigating you to a successful approval.</p>
                 </div>
             </div>
             <div class="row">
@@ -160,40 +160,77 @@
                 </div>
             </div>
 
-            <div class="trialslidewrapper">
-                <div class="trialslides">
-                    <div class="trialslide">
-                        <div class="infographic">
-                            <div class="circle challenge">
-                                <img src="images/infographic-circ-orange.png" alt="" />
-                                <div class="circlecontent">
-                                    <h4>Challenge</h4>
-                                    <p>A sponsor wants to design a clinical trial to result in approval of their iliac artery stent by the US Food and Drug Administration.</p>
+            <div id="trialslideshow" class="slideshowwrapper">
+                <div class="row">
+                    <div class="slides twenty columns centered">
+
+                        <div class="slide">
+                            <div class="infographic">
+                                <div class="circle challenge">
+                                    <img src="images/infographic-circ-orange.png" alt="" />
+                                    <div class="circlecontent">
+                                        <h4>Challenge</h4>
+                                        <p>A sponsor wants to design a clinical trial to result in approval of their iliac artery stent by the US Food and Drug Administration.</p>
+                                    </div>
+                                </div>
+                                <div class="circle solution">
+                                    <img src="images/infographic-circ-aqua.png" alt="" />
+                                    <div class="circlecontent">
+                                        <h4>Solution</h4>
+                                        <p>We designed the duplex ultrasound imaging protocol and trained the sites in the performance of this imaging protocol.</p>
+                                    </div>
+                                </div>
+                                <div class="circle result">
+                                    <img src="images/infographic-circ-blue.png" alt="" />
+                                    <div class="circlecontent">
+                                        <h4>Result</h4>
+                                        <p>First Iliac Artery Stent Approved in the U.S.</p>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="circle solution">
-                                <img src="images/infographic-circ-aqua.png" alt="" />
-                                <div class="circlecontent">
-                                    <h4>Solution</h4>
-                                    <p>We designed the duplex ultrasound imaging protocol and trained the sites in the performance of this imaging protocol.</p>
-                                </div>
-                            </div>
-                            <div class="circle result">
-                                <img src="images/infographic-circ-blue.png" alt="" />
-                                <div class="circlecontent">
-                                    <h4>Result</h4>
-                                    <p>First Iliac Artery Stent Approved in the U.S.</p>
-                                </div>
+                            <div class="slideactions">
+                                <a href="#" class="btn" target="_blank">View on PubMed</a>
+                                <a href="casestudy1_image1.html" class="btn reveal">View Trial Images</a>
                             </div>
                         </div>
-                        <div class="slideactions">
-                            <a href="#" class="btn">View on PubMed</a>
-                            <a href="#" class="btn">View Trial Images</a>
+
+                        <div class="slide">
+                            <div class="infographic">
+                                <div class="circle challenge">
+                                    <img src="images/infographic-circ-orange.png" alt="" />
+                                    <div class="circlecontent">
+                                        <h4>Challenge</h4>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+                                    </div>
+                                </div>
+                                <div class="circle solution">
+                                    <img src="images/infographic-circ-aqua.png" alt="" />
+                                    <div class="circlecontent">
+                                        <h4>Solution</h4>
+                                        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                                    </div>
+                                </div>
+                                <div class="circle result">
+                                    <img src="images/infographic-circ-blue.png" alt="" />
+                                    <div class="circlecontent">
+                                        <h4>Result</h4>
+                                        <p>Duis aute irure dolor in repre henderit.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="slideactions">
+                                <a href="#" class="btn" target="_blank">View on PubMed</a>
+                                <a href="#" class="btn">View Trial Images</a>
+                            </div>
                         </div>
+
+                    </div>
+
+                    <div class="slidecount four">
+                        <span id="trial-currentslide">1</span> of <span  id="trial-totalslides"></span>
                     </div>
                 </div>
             </div>
-
         </div>
         <div class="section" id="services">
             <div class="row">
